--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: bip32_defichain
 description: A BIP32 (https://github.com/bitcoin/bips/blob/master/bip-0032.mediawiki) compatible library for Flutter writing by Dart. Fork (https://github.com/DeFiCh-WalletApp/bip32-dart)
-version: 3.0.0
+version: 3.0.1+1
 homepage: https://github.com/DeFiCh-WalletApp/bip32-dart
 
 environment:
